src/tests/fixtures/arguments/DeprecatedRequiredArgument.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class Query {
  /** @gqlField */
  hello({
    greeting,
  }: {
    /** @deprecated Not used anymore */
    greeting: string;
  }): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/DeprecatedRequiredArgument.invalid.ts:7:10 - error: Required argument Query.hello(greeting:) cannot be deprecated.

7     /** @deprecated Not used anymore */
           ~~~~~~~~~~

  src/tests/fixtures/arguments/DeprecatedRequiredArgument.invalid.ts:8:15
    8     greeting: string;
                    ~~~~~~
    Related location
